--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ body, html {
     <p></p>
     <p></p>
     <div class="w3-panel w3-pale-blue w3-leftbar w3-rightbar w3-border-blue">
+      <strong>ॐ रामसरुप नमः </strong>
       <p><i>NOTE:- </i></p>
       <p>1. जिसकी पेमेंट पूरी होगी उसकी गेम ओके मानी जायेगी |</p>
       <p>2. पेमेंट नहीं डालने पर गेम ओके नहीं मानी जायेगी |</p>
@@ -64,8 +65,6 @@ body, html {
       <p>4. जो गेम का टाइम है उसी टाइम पर गेम ओके होगी टाइम ओवर होने के बाद ओके नहीं मानी जायेगी |</p>
       <p>5. पेमेंट खबर आने के 10 या 15 मिनट बाद पेमेंट अकाउंट में डालदी जायेगी |</p>
       <p>6. दिसावर की पेमेंट सुबह 9 बजे तक अकाउंट में डाल दी जायेगी |</p>
-      <p>7. खाईवाल अपना परचा कमीशन पर दे सकते है |</p>
-      <p>8. गेम कितने भी दाने की हो या फिर कबाड़ हो सब कुछ ओके हो जाएगा |</p>
       <p>9. आप हमे डायरेक्ट कॉल करके गेम लिखवा सकते है 
         आप हमे Whatsapp पर भी गेम भेज सकते है |</p>
         <p>10. किसी भी खिलाडी को कोई भी दिक्कत हो कोई परेशानी हो आप हमे Whatsapp कॉल कर सकते है 
@@ -126,7 +125,7 @@ body, html {
     <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide"></span></h5>
     <p><span class="w3-tag">Game Likhvane ke liye Message kre:</span> </p>
     <p><span class= "w3-tag">Paytm, Phonepay, Gpay: 9599354242</span></p>
-    <p><strong>Whatsapp No. :- </strong>7217834626</p>
+    <p><strong>Whatsapp No. :- </strong></p>
     <form>
     <button> <a href="https://api.whatsapp.com/resolve?deeplink=/%3Ftext%3Daaa"  target="_blank" class="whatsapp_float">Game Likhvaye</a></button>
     </form>
