--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@ body, html {
     </div>
     <img src="Lucky Number.png" style="width:100%; max-width:1000px" class="w3-margin-top">
     <p><strong>Paytm, Phonepay, Gpay:</strong> 9599354242</p>
-    <p><strong>Phone Number:</strong> 7217834626</p>
+    <p><strong>Phone Number:</strong> </p>
+    <a href="https://wa.me/+919873009275?text=" target="_blank" class="w3-btn w3-black w3-large">Game Likhvaye</a>
   </div>
 </div>
 
