--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ body, html {
     <p><span class= "w3-tag">Paytm, Phonepay, Gpay: 9599354242</span></p>
     <p><strong>Whatsapp No. :- </strong></p>
     <form>
-    <button> <a href="https://api.whatsapp.com/resolve?deeplink=/%3Ftext%3Daaa"  target="_blank" class="whatsapp_float">Game Likhvaye</a></button>
+    <button> <a href="https://wa.me/+9873009275?text=" target="_blank" class="w3-btn w3-black w3-large">Game Likhvaye</a></button>
     </form>
   </div>
 </div>
