--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ body, html {
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide"></span></h5>
     <p></p>
     <p></p>
-    <div class="w3-panel w3-pale-blue w3-leftbar w3-rightbar w3-border-blue">
+    <div class="w3-panel w3-blue w3-leftbar w3-rightbar w3-border-blue">
       <strong>ॐ रामसरुप नमः </strong>
       <p><i>NOTE:- </i></p>
       <p>1. जिसकी पेमेंट पूरी होगी उसकी गेम ओके मानी जायेगी |</p>
@@ -68,7 +68,7 @@ body, html {
       <p>9. आप हमे डायरेक्ट कॉल करके गेम लिखवा सकते है 
         आप हमे Whatsapp पर भी गेम भेज सकते है |</p>
         <p>10. किसी भी खिलाडी को कोई भी दिक्कत हो कोई परेशानी हो आप हमे Whatsapp कॉल कर सकते है 
-            Whatsapp No. - 7217834626</p>
+            Whatsapp No. - 9873009275</p>
       <p>एक बार सेवा का मौका आवश्य दे 
         विश्वास से बड़ कर कुछ नहीं  होता 
         बेमानी का एक दिन खा लेगा 10 दिन रोयेगा |
@@ -128,7 +128,7 @@ body, html {
     <p><span class= "w3-tag">Paytm, Phonepay, Gpay: 9599354242</span></p>
     <p><strong>Whatsapp No. :- </strong></p>
     <form>
-    <button> <a href="https://wa.me/+9873009275?text=" target="_blank" class="w3-btn w3-black w3-large">Game Likhvaye</a></button>
+    <button> <a href="https://wa.me/+919873009275?text=" target="_blank" class="w3-btn w3-black w3-large">Game Likhvaye</a></button>
     </form>
   </div>
 </div>
