--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
 <head>
   <link rel="shortcut icon" type="image/x-icon" href="Lucky Number.png" />
@@ -56,7 +57,7 @@ body, html {
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide"></span></h5>
     <p></p>
     <p></p>
-    <div class="w3-panel w3-blue w3-leftbar w3-rightbar w3-border-blue">
+    <div class="w3-panel w3-pale-blue w3-leftbar w3-rightbar w3-border-blue">
       <strong>ॐ रामसरुप नमः </strong>
       <p><i>NOTE:- </i></p>
       <p>1. जिसकी पेमेंट पूरी होगी उसकी गेम ओके मानी जायेगी |</p>
@@ -126,10 +127,10 @@ body, html {
     <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide"></span></h5>
     <p><span class="w3-tag">Game Likhvane ke liye Message kre:</span> </p>
     <p><span class= "w3-tag">Paytm, Phonepay, Gpay: 9599354242</span></p>
-    <p><strong>Whatsapp No. :- </strong></p>
-    <form>
+    <p><strong>Whatsapp No. :- 9873009275</strong></p>
+
     <button> <a href="https://wa.me/+919873009275?text=" target="_blank" class="w3-btn w3-black w3-large">Game Likhvaye</a></button>
-    </form>
+  
   </div>
 </div>
 
